# LLECP

./: README.md
LLECP/: CMakeLists.txt  main.cpp
LLECP/EtherCATMaster/: CMakeLists.txt  EtherCATDef.h  EtherCATMaster.cpp  EtherCATMaster.h  Slave.cpp  Slave.h  sdo_operation.cpp
LLECP/EtherCATMaster/SOEM/: CMakeLists.txt
LLECP/EtherCATMaster/SOEM/osal/: osal.h
LLECP/EtherCATMaster/SOEM/oshw/linux/: oshw.h
LLECP/EtherCATMaster/SOEM/oshw/rtk/: oshw.h
LLECP/EtherCATMaster/SOEM/soem/: ec_foe.c  ec_type.h  soem.h
LLECP/EtherCATMaster/slave/: EL1088.cpp  EL1088.h  EL2088.cpp  EL2088.h  NETX_50_RE_ECS.cpp  NETX_50_RE_ECS.h  SlaveBase.cpp  SlaveBase.h  SlaveDef.h
LLECP/LLSMC/: CMakeLists.txt  LL_SMC.cpp  LL_SMC.h
LLECP/LLSMC/CIA402Axis/: AxisErrorCode.h  AxisFriendList.h  CIA402Axis.cpp  CIA402Axis.h  CIA402AxisConfig.cpp  CIA402AxisDef.h  CIA402AxisGeneral.cpp  CIA402AxisPDO.cpp  CMakeLists.txt
LLECP/LLSMC/FunctionBlock/: CMakeLists.txt  FunctionBlock.h  FunctionBlockBase.cpp  FunctionBlockBase.h
LLECP/LLSMC/FunctionBlock/FB_subclass/: FB_Power.cpp  FB_Power.h
LLECP/LLSMC/MotionAlgorithm/: CMakeLists.txt
LLECP/LLSMC/MotionAlgorithm/MotionPlanning/: CMakeLists.txt  Luolimath.cpp  Luolimath.h  MotionDefine.h  MotionPlanning.cpp  MotionPlanning.h
LLECP/LLSMC/SMbasic/: CMakeLists.txt  SMbasic.cpp  SMbasic.h  SMbasicDef.h  SMbasicErrorCode.h  SMbasic_stdafx.h
LLECP/LLSMC/SMbasic/AxisConfig/: MC_SetEncodeRatio.cpp  MC_SetEncodeRatio.h  MC_SetGearingRatio.cpp  MC_SetGearingRatio.h  MC_SetSWLimit.cpp  MC_SetSWLimit.h
LLECP/LLSMC/SMbasic/AxisControl/: MC_ClearFault.cpp  MC_ClearFault.h  MC_InitResetAxis.cpp  MC_InitResetAxis.h  MC_Power.cpp  MC_Power.h  MC_PowerOff.cpp  MC_PowerOff.h  MC_PowerOn.cpp  MC_PowerOn.h  MC_Reset.cpp  MC_Reset.h
LLECP/LLSMC/SMbasic/AxisMovement/: MC_FollowPosition.cpp  MC_FollowPosition.h  MC_FollowTorque.cpp  MC_FollowTorque.h  MC_FollowVelocity.cpp  MC_FollowVelocity.h  MC_MoveAbsolute.cpp  MC_MoveAbsolute.h  MC_MoveRelative.cpp  MC_MoveRelative.h  MC_MoveVelocity.cpp  MC_MoveVelocity.h  MC_SetOverride.cpp  MC_SetOverride.h  MC_SetPosition.cpp  MC_SetPosition.h  MC_Stop.cpp  MC_Stop.h
LLECP/LLSMC/SMbasic/AxisRead/: MC_ReadActualPosition.cpp  MC_ReadActualPosition.h
LLECP/LLSMC/SMbasic/SoftMotion/: SoftMotion.h
LLECP/LLSMC/SMbasic/motion_algorithm/motion_planning/: MotionDefine.h  motion_planning.h
LLECP/LLSMC/SoftMotion/: CMakeLists.txt  SoftMotion.cpp  SoftMotion.h  SoftMotionPDO.cpp  SoftMotionPlanner.cpp
LLECP/LLSMC/SoftMotion/motion_algorithm/: CMakeLists.txt
LLECP/LLSMC/SoftMotion/motion_algorithm/motion_planning/: MotionDefine.h  motion_planning.cpp  motion_planning.h
LLECP/RT_Script/: CMakeLists.txt  RT_Script.cpp  RT_Script.h  RT_ScriptActuator.cpp  RT_ScriptActuatorUint.cpp  RT_ScriptCalculator.cpp  RT_ScriptInterpreter.cpp  ScriptDefine.h  ScriptVariable.cpp  ScriptVariable.h  sCmdNameDefine.h
LLECP/RT_Script/ScriptUint/: CmdTypeDefine.h  Definition.h  ScriptUint_Buffer.cpp  ScriptUint_Buffer.h  ScriptUint_Cmd.cpp  ScriptUint_Cmd.h  ScriptUint_Line.cpp  ScriptUint_Line.h  ScriptUint_Script.cpp  ScriptUint_Script.h  ScriptUint_Token.cpp  ScriptUint_Token.h
LLECP/TestExamples/: CMakeLists.txt  EtherCATMasterExamples.cpp  MotionPlanningExamples.cpp  RT_ScriptExamples.cpp
